Completed the requirements of the flashcards project. Still working on the reporting feature.

--- a/.gitignore
+++ b/.gitignore
@@ -399,6 +399,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+.idea/
 
 ##
 ## Visual studio for Mac
@@ -475,5 +476,3 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-
-.idea
