Fixed Code Review Suggestions
Made the Database info (Server, Database, Trusted_Connection) configurable from within App.config and fixed several crash issues around building a selection prompt with a null list (as a result of empty databases)

--- a/FlashCards.MichaelKarcz/FlashCards/App.config
+++ b/FlashCards.MichaelKarcz/FlashCards/App.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="masterConnectionString" value="Server=(LocalDB)\LocalDBCSharpAcademy;Database=master;Trusted_Connection=True;" />
-		<add key="flashcardsConnectionString" value="Server=(LocalDB)\LocalDBCSharpAcademy;Database=Flashcards;Trusted_Connection=True;" />
+    <add key="masterServer" value="(LocalDB)\LocalDBCSharpAcademy"/>
+    <add key="masterDatabase" value="master"/>
+    <add key="masterTrustedConnection" value="True"/>
+    <add key="server" value="(LocalDB)\LocalDBCSharpAcademy"/>
+    <add key="database" value="FlashcardsTest"/>
+    <add key="trustedConnection" value="True"/>
 	</appSettings>
 </configuration>
